<resources>
    <string name="app_name">RetrofitMoviesAndCities</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="news">News</string>
    <string name="movie_description">Краткое описание</string>
    <string name="movie_starts">В главных ролях</string>
    <string name="watch_trailer">Посмотреть трейлер</string>
    <string name="places">Places</string>
    <string name="address">Адрес</string>
</resources>