<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/moviesFragment">
    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.androidgang.retrofitmoviesandcities.ui.movies.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" >
        <action
            android:id="@+id/action_moviesFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.androidgang.retrofitmoviesandcities.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_newsFragment_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.androidgang.retrofitmoviesandcities.ui.movieDetails.MovieDetailsFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movie_details" >
        <action
            android:id="@+id/action_movieDetailsFragment_to_moviesFragment"
            app:destination="@id/moviesFragment" />
        <argument
            android:name="titleMovie"
            app:argType="string"
            android:defaultValue="title"
            app:nullable="true" />
        <argument
            android:name="descriptionMovie"
            app:argType="string"
            android:defaultValue="description"
            app:nullable="true" />
        <argument
            android:name="country"
            app:argType="string"
            android:defaultValue="country"
            app:nullable="true" />
        <argument
            android:name="ageRestriction"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="age" />
        <argument
            android:name="stars"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="stars" />
        <argument
            android:name="trailerUrl"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="trailer" />
        <argument
            android:name="image"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/newsDetailsFragment"
        android:name="com.androidgang.retrofitmoviesandcities.ui.newsDetails.NewsDetailsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news_details" >
        <action
            android:id="@+id/action_newsDetailsFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
        <argument
            android:name="newsTitle"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="newsDescription"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="image"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/placesFragment"
        android:name="com.androidgang.retrofitmoviesandcities.ui.places.PlacesFragment"
        android:label="@string/places"
        tools:layout="@layout/fragment_places" >
        <action
            android:id="@+id/action_placesFragment_to_placeDetailsFragment"
            app:destination="@id/placeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/placeDetailsFragment"
        android:name="com.androidgang.retrofitmoviesandcities.ui.placesDetails.PlaceDetailsFragment"
        android:label="@string/places" >
        <action
            android:id="@+id/action_placeDetailsFragment_to_placesFragment"
            app:destination="@id/placesFragment" />
        <argument
            android:name="image"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="address"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="description"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>